Fixed a mobile bug with the spacing

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -5,8 +5,8 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
-  margin-bottom: 50px;
+  // margin-top: 150px;
+  // margin-bottom: 150px;
   width: 90%;
   @include tablet {
     margin-top: 0;
@@ -51,13 +51,12 @@
 
 .about-me {
   padding: 20px 0;
-  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 100px;
   @include tablet {
     margin-bottom: 0;
+    height: 70vh;
   }
 }
 
